--- a/animation/index.html
+++ b/animation/index.html
@@ -8,9 +8,10 @@
     <body>
     <header></header>
         <div class ="container">
-                <p>fdffd</p>
+
             <div id="title">
                 <h2>CSS3 SHAPES</h2>
+                <h4>Sample css3 shapes</h4>
                     
             </div>
      
