created shapes div

--- a/animation/index.html
+++ b/animation/index.html
@@ -14,6 +14,7 @@
                 <h4>Sample css3 shapes</h4>
                     
             </div>
+            <div id="shapes"></div>
      
 
         </div>
