created four divs in shapes

--- a/animation/index.html
+++ b/animation/index.html
@@ -14,7 +14,17 @@
                 <h4>Sample css3 shapes</h4>
                     
             </div>
-            <div id="shapes"></div>
+            <div id="shapes">
+                <div id=""></div>
+                <div id=""></div>
+                <div id=""></div>
+                <div id=""></div>
+
+
+
+
+
+            </div>
             <div id=""></div>
      
 
