--- a/animation/index.html
+++ b/animation/index.html
@@ -15,10 +15,10 @@
                     
             </div>
             <div id="shapes">
-                <div id=""></div>
-                <div id=""></div>
-                <div id=""></div>
-                <div id=""></div>
+                <div id="triangle"></div>
+                <div id="rectangle"></div>
+                <div id="square"></div>
+                <div id="circle"></div>
 
 
 
