--- a/animation/index.html
+++ b/animation/index.html
@@ -16,7 +16,7 @@
             </div>
             <div id="shapes">
                 <div id="triangle"></div>
-                <div id="rectangle"></div>
+                <div id="rect"></div>
                 <div id="square"></div>
                 <div id="circle"></div>
 
