created divs inside triangle

--- a/animation/index.html
+++ b/animation/index.html
@@ -15,7 +15,14 @@
                     
             </div>
             <div id="shapes">
-                <div id="triangle"></div>
+                <div id="triangle">
+                    <div id="the-triangle"></div>
+                    <div id="name-triangle"></div>
+                    <div id="description-triangle"></div>
+
+                </div>
+
+
                 <div id="rect"></div>
                 <div id="square"></div>
                 <div id="circle"></div>
