--- a/animation/index.html
+++ b/animation/index.html
@@ -15,7 +15,7 @@
                     
             </div>
             <div id="shapes">
-                <div id="triangle">
+                <div id="triangle">t
                     <div id="the-triangle"></div>
                     <div id="name-triangle"></div>
                     <div id="description-triangle"></div>
@@ -23,9 +23,9 @@
                 </div>
 
 
-                <div id="rect"></div>
-                <div id="square"></div>
-                <div id="circle"></div>
+                <div id="square">ss</div>
+                <div id="rect">s</div>
+                <div id="circle">s</div>
 
 
 
