created square shape

--- a/animation/index.html
+++ b/animation/index.html
@@ -16,14 +16,20 @@
             </div>
             <div id="shapes">
                 <div id="triangle">t
-                    <div id="the-triangle"></div>
-                    <div id="name-triangle"></div>
-                    <div id="description-triangle"></div>
+
 
                 </div>
 
 
-                <div id="square">ss</div>
+                <div id="square">
+                    <div id="the-square"></div>
+                    <div id="name-square">
+                    <h3>Square</h3>
+                    </div>
+                    <div id="description-square">
+                    <p>This is a square done in CSS3</p>
+                    </div>
+                </div>
                 <div id="rect">s</div>
                 <div id="circle">s</div>
 
