--- a/animation/index.html
+++ b/animation/index.html
@@ -15,7 +15,10 @@
                     
             </div>
             <div id="shapes">
-                <div id="triangle">t
+                <div id="triangle">
+                    <div id="the-triangle"></div>
+                    <div id="name-triangle"></div>
+                    <div id="description-triangle"></div>
 
 
                 </div>
@@ -30,8 +33,30 @@
                     <p>This is a square done in CSS3</p>
                     </div>
                 </div>
-                <div id="rect">s</div>
-                <div id="circle">s</div>
+                <div id="rect">
+                    <div id="the-rect"></div>
+                    <div id="name-rect">
+                        <h3>Rectangle</h3>
+
+
+                    </div>
+                    <div id="description-rect">
+                         <p>This is a rectangle done in CSS3</p>
+
+                    </div>
+
+
+
+                </div>
+                <div id="circle">
+                     <div id="the-circle"></div>
+                    <div id="name-circle"></div>
+                    <div id="description-circle"></div>
+
+
+
+
+                </div>
 
 
 
