--- a/animation/index.html
+++ b/animation/index.html
@@ -50,8 +50,13 @@
                 </div>
                 <div id="circle">
                      <div id="the-circle"></div>
-                    <div id="name-circle"></div>
-                    <div id="description-circle"></div>
+                    <div id="name-circle">
+                        <h3>Circle</h3>
+
+                    </div>
+                    <div id="description-circle">
+                        <p>This is a Circle done in CSS3</p>
+                    </div>
 
 
 
