Created a triangle css3

--- a/animation/index.html
+++ b/animation/index.html
@@ -17,8 +17,14 @@
             <div id="shapes">
                 <div id="triangle">
                     <div id="the-triangle"></div>
-                    <div id="name-triangle"></div>
-                    <div id="description-triangle"></div>
+                    <div id="name-triangle">
+                        <h3>Triangle</h3>
+
+                    </div>
+                    <div id="description-triangle">
+                          <p>This is a triangle done in CSS3</p>
+
+                    </div>
 
 
                 </div>
