used a class to style the circles in section 3

--- a/animation/index.html
+++ b/animation/index.html
@@ -74,7 +74,27 @@
 
 
             </div>
-            <div id=""></div>
+            <div cid="sec3">
+                <div class="circ">
+                    <h3>One</h3>
+                    <p>This is a sample circular div</p>
+                </div>
+                <div class="circ">
+                    <h3>Two</h3>
+                    <p>This is a sample circular div</p>
+                </div>
+
+                <div class="circ">
+                     <h3>Three</h3>
+                    <p>This is a sample circular div</p>
+                </div>
+
+            </div>
+
+
+
+
+            </div>
      
 
         </div>
